--- a/IntegrationTool.UnitTests.Transformations/IntegrationTool.UnitTests.Transformations.csproj
+++ b/IntegrationTool.UnitTests.Transformations/IntegrationTool.UnitTests.Transformations.csproj
@@ -52,7 +52,8 @@
   <ItemGroup>
     <Compile Include="Classes\JoinRecordsRow.cs" />
     <Compile Include="Test_Helpers.cs" />
-    <Compile Include="Test_JoinRecords.cs" />
+    <Compile Include="Test_JoinRecords_ComplexTests.cs" />
+    <Compile Include="Test_JoinRecords_SimpleTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
