--- a/IntegrationTool.Module.Crm2013Wrapper/IntegrationTool.Module.CrmWrapper.csproj
+++ b/IntegrationTool.Module.Crm2013Wrapper/IntegrationTool.Module.CrmWrapper.csproj
@@ -41,10 +41,13 @@
       <HintPath>..\References\Microsoft.Xrm.Client.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Microsoft.Xrm.Sdk, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.Xrm.Sdk, Version=8.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\References\Microsoft.Xrm.Sdk.dll</HintPath>
       <Private>False</Private>
+    </Reference>
+    <Reference Include="Microsoft.Xrm.Tooling.Connector">
+      <HintPath>..\References\Microsoft.Xrm.Tooling.Connector.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -60,6 +63,7 @@
   <ItemGroup>
     <Compile Include="Crm2013Wrapper.cs" />
     <Compile Include="DateTimeHelper.cs" />
+    <Compile Include="Dynamics365Wrapper.cs" />
     <Compile Include="JoinResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
