--- a/IntegrationTool.UnitTests.ApplicationCore/IntegrationTool.UnitTests.ApplicationCore.csproj
+++ b/IntegrationTool.UnitTests.ApplicationCore/IntegrationTool.UnitTests.ApplicationCore.csproj
@@ -77,6 +77,11 @@
     <Compile Include="FlowTestProjects\Test_ErrCont_Complex.cs" />
     <Compile Include="FlowTestProjects\Test_ErrCont_StraightLine.cs" />
     <Compile Include="FlowTestProjects\Test_ErrPath_BasicTests.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Test_ModuleLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test_ConfigurationHandling.cs" />
@@ -127,7 +132,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
