--- a/IntegrationTool.UnitTests.Sources/app.config
+++ b/IntegrationTool.UnitTests.Sources/app.config
@@ -12,4 +12,12 @@
             </setting>
         </IntegrationTool.UnitTests.Sources.Properties.Settings>
     </userSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Xrm.Sdk" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
