Working on Update Changed Values Only. Do not use this revision.

--- a/IntegrationTool.Module.Crm2013Wrapper/IntegrationTool.Module.CrmWrapper.csproj
+++ b/IntegrationTool.Module.Crm2013Wrapper/IntegrationTool.Module.CrmWrapper.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Crm2013Wrapper.cs" />
     <Compile Include="DateTimeHelper.cs" />
     <Compile Include="Dynamics365Wrapper.cs" />
+    <Compile Include="Dynamics365ExtensionMethods.cs" />
     <Compile Include="JoinResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
