--- a/IntegrationTool.Module.WriteToDynamicsCrm/IntegrationTool.Module.WriteToDynamicsCrm.csproj
+++ b/IntegrationTool.Module.WriteToDynamicsCrm/IntegrationTool.Module.WriteToDynamicsCrm.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>RecordLogListControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Logging\RecordLogList\RecordLog.cs" />
+    <Compile Include="SDK\Constants.cs" />
     <Compile Include="SDK\Enums\ImportMode.cs" />
     <Compile Include="SDK\Enums\MappingNotFoundType.cs" />
     <Compile Include="SDK\Enums\MultipleFoundMode.cs" />
