Worked on recentfiles-list

--- a/IntegrationTool.ProjectDesigner/IntegrationTool.ProjectDesigner.csproj
+++ b/IntegrationTool.ProjectDesigner/IntegrationTool.ProjectDesigner.csproj
@@ -81,6 +81,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Classes\ApplicationLocalStorageHelper.cs" />
+    <Compile Include="Classes\RecentFilesList.cs" />
     <Compile Include="Classes\StepCopy.cs" />
     <Compile Include="Classes\StepProperty.cs" />
     <Compile Include="Classes\WindowResult.cs" />
