--- a/IntegrationTool.UnitTests.Sources/IntegrationTool.UnitTests.Sources.csproj
+++ b/IntegrationTool.UnitTests.Sources/IntegrationTool.UnitTests.Sources.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test_LoadFromCSV.cs" />
     <Compile Include="Test_LoadFromDynamicsCRM.cs" />
+    <Compile Include="Test_LoadFromSharepoint.cs" />
     <Compile Include="Test_LoadFromWebRequest.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -85,6 +86,10 @@
     <ProjectReference Include="..\IntegrationTool.Module.ConnectToExcel\IntegrationTool.Module.ConnectToExcel.csproj">
       <Project>{78ab131a-7b8e-40ed-b8cd-861c274cf14d}</Project>
       <Name>IntegrationTool.Module.ConnectToExcel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IntegrationTool.Module.ConnectToSharepoint\IntegrationTool.Module.ConnectToSharepoint.csproj">
+      <Project>{EE2D6E05-EA00-44C8-BDCA-0C46F4FBF2D4}</Project>
+      <Name>IntegrationTool.Module.ConnectToSharepoint</Name>
     </ProjectReference>
     <ProjectReference Include="..\IntegrationTool.Module.ConnectToTextFile\IntegrationTool.Module.ConnectToTextFile.csproj">
       <Project>{3a4d2e2c-ade3-4d22-a065-ad8f406a7b3f}</Project>
